--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -2,7 +2,7 @@
        <h3>Qualified Terms</h3>
        <p>The classes and properties in the Qualified terms category are for users who wish to provide additional details about the relationships between entities, activities, and agents. The terms in this category are the result of applying the <strong>Qualification Pattern</strong> to the simple relations available in the <a href="#prov-starting-point-owl-properties-at-a-glance">Starting Point</a> and <a href="#prov-expanded-owl-properties-at-a-glance">Expanded</a> categories.
       </p>
-      <p>For example, Figure 2 illustrates the classes and properties needed to fulfill the qualification pattern for the <a href="#used">prov:used</a> and <a href="#wasAssociatedWith">prov:wasAssociatedWith</a> properties. While <a href="#qualifiedUsage">prov:qualifiedUsage</a>, <a href="#Usage">prov:Usage</a>, and <a href="#entity">prov:entity</a> are used to qualify <span class="repeated">prov:used</span> relations, <a href="#qualifiedAssociation">prov:qualifiedAssociation</a>, <a href="#Association">prov:Association</a>, and <a href="#agent">prov:agent</a> are used to qualify <span class="repeated">prov:wasAssociatedWith</span> relations. This pattern applies to the twelve other relations that can be qualified.
+      <p>For example, Figure 2 illustrates the classes and properties needed to fulfill the qualification pattern for the <a class="qname" href="#used">prov:used</a> and <a class="qname" href="#wasAssociatedWith">prov:wasAssociatedWith</a> properties. While <a class="qname" href="#qualifiedUsage">prov:qualifiedUsage</a>, <a class="qname" href="#Usage">prov:Usage</a>, and <a class="qname" href="#entity">prov:entity</a> are used to qualify <span class="repeated">prov:used</span> relations, <a class="qname" href="#qualifiedAssociation">prov:qualifiedAssociation</a>, <a class="qname" href="#Association">prov:Association</a>, and <a class="qname" href="#agent">prov:agent</a> are used to qualify <span class="repeated">prov:wasAssociatedWith</span> relations. This pattern applies to the twelve other relations that can be qualified.
       </p>
       <p>In the example, the <span class="repeated">prov:qualifiedUsage</span> property parallels the <span class="repeated">prov:used</span> property, and references an instance of <span class="repeated">prov:Usage</span> that provides attributes of the <span class="repeated">prov:used</span> relation between the Activity and Entity. The <span class="repeated">prov:entity</span> property is used to cite the Entity that was used by the Activity. In this case, the time that the Activity used the Entity is provided using the <span class="repeated">prov:atTime</span> property and a literal <span class="repeated">xsd:dateTime</span> value.
       </p>
@@ -14,7 +14,7 @@
             <img src="prov-o-diagrams/Qualified-Association.png"
                  style="width: 50%; min-width: 25em; max-width: 60em" 
                  alt="Express association between an activity and an agent using a binary relationship and an alternatie qualified relationship"/>
-            <figcaption>Figure 2. An illustration of the qualification pattern applied to the Starting Point properties <a href="#used">prov:used</a> and <a href="#wasAssociatedWith">prov:wasAssociatedWith</a>.</figcaption>
+            <figcaption>Figure 2. An illustration of the qualification pattern applied to the Starting Point properties <a class="qname" href="#used">prov:used</a> and <a class="qname" href="#wasAssociatedWith">prov:wasAssociatedWith</a>.</figcaption>
          </figure>
        </div>
 
