--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -2,15 +2,16 @@
 	  	<h3>Starting Point Terms</h3>
        <p>The Starting Point category is a small collection of classes and properties that can be used to create simple, initial provenance descriptions.
          Three classes provide a basis for the rest of PROV-O:  
+       </p>
          <ul>
-            <li> <a href="#Entity">prov:Entity</a>: An entity is a thing one wants to provide provenance for. Things can be physical, digital, conceptual, or otherwise.
+            <li> <a class="qname" href="#Entity">prov:Entity</a>: An entity is a thing one wants to provide provenance for. Things can be physical, digital, conceptual, or otherwise.
             </li>
-            <li> <a href="#Activity">prov:Activity</a>: An activity is something that occurs over a period of time and acts upon or with entities. This action can take multiple forms: consuming, processing, transforming, modifying, relocating, using, generating, etc.
+            <li> <a class="qname" href="#Activity">prov:Activity</a>: An activity is something that occurs over a period of time and acts upon or with entities. This action can take multiple forms: consuming, processing, transforming, modifying, relocating, using, generating, etc.
             </li>
-            <li> <a href="#Agent">prov:Agent</a>: An agent bears some form of responsibility for an activity taking place. Further, an agent may act on behalf of another agent when involved with an activity.
+            <li> <a class="qname" href="#Agent">prov:Agent</a>: An agent bears some form of responsibility for an activity taking place. Further, an agent may act on behalf of another agent when involved with an activity.
             </li>
          </ul> 
-      These three classes and the properties that relate them are illustrated in the following figure. 
+      <p>These three classes and the properties that relate them are illustrated in the following figure.
       </p>
 
       <div style="text-align: center;">
