nested narrative into div for anchor friendly

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -34,16 +34,20 @@
               <pre class="example">{% include "includes/eg16-journalism-qualified-association.ttl" %}</pre>
        </div>
 
-      <p>Usage and Association (described above) are accompanied by six other qualifications of Starting Point relations. The following table lists the simple relations that can be qualified, along with the qualification property, qualification class, and the property used to indicate the object of the qualified relation.
-      </p>
-      <div style="text-align: center;">
-         {% include "includes/qualifed-forms-starting-point.html" %}
+      <div id="qualifed-forms-starting-point" style="padding: 20px">
+         <p>Usage and Association (described above) are accompanied by six other qualifications of Starting Point relations. The <a href="#qualifed-forms-starting-point">following table</a> lists the simple relations that can be qualified, along with the qualification property, qualification class, and the property used to indicate the object of the qualified relation.
+         </p>
+         <div style="text-align: center">
+            {% include "includes/qualifed-forms-starting-point.html" %}
+         </div>
       </div>
 
-      <p>Six relations from the Expanded category can also be qualified. The following table lists the simple relations that can be qualified, along with the qualification property, qualification class, and the property used to indicate the object of the qualified relation.
-      </p>
-      <div style="text-align: center;">
-         {% include "includes/qualifed-forms-expanded.html" %}
+      <div id="qualifed-forms-expanded" style="padding: 20px">
+         <p>Six relations from the Expanded category can also be qualified. The <a href="#qualifed-forms-expanded">following table</a> lists the simple relations that can be qualified, along with the qualification property, qualification class, and the property used to indicate the object of the qualified relation.
+         </p>
+         <div style="text-align: center">
+            {% include "includes/qualifed-forms-expanded.html" %}
+         </div>
       </div>
 
        <p>This section finishes with two more examples of qualification as applied to the chart making example from <a href=#description-starting-point-terms>Section 3.1</a>.
