added examples pulled directly from http://dvcs.w3.org/hg/prov/file/tip/examples/eg-24-prov-o-html-examples/rdf/create/rdf

--- a/components/services/prov-o/includes/at-a-glance-collections.html
+++ b/components/services/prov-o/includes/at-a-glance-collections.html
@@ -45,10 +45,10 @@
       <a href="#key">prov:key</a>
     </li>
     <li class="object-property">
-      <a href="#knownMembership">prov:knownMembership</a>
+      <a href="#member">prov:member</a>
     </li>
     <li class="object-property">
-      <a href="#member">prov:member</a>
+      <a href="#membership">prov:membership</a>
     </li>
     <li class="object-property">
       <a href="#qualifiedInsertion">prov:qualifiedInsertion</a>
