--- a/components/services/prov-o/includes/at-a-glance-expanded.html
+++ b/components/services/prov-o/includes/at-a-glance-expanded.html
@@ -30,10 +30,10 @@
       <a href="#alternateOf">prov:alternateOf</a>
     </li>
     <li class="object-property">
-      <a href="#generated">prov:generated</a>
+      <a href="#atLocation">prov:atLocation</a>
     </li>
     <li class="object-property">
-      <a href="#hadLocation">prov:hadLocation</a>
+      <a href="#generated">prov:generated</a>
     </li>
     <li class="object-property">
       <a href="#hadOriginalSource">prov:hadOriginalSource</a>
