--- a/components/services/prov-o/includes/cross-reference-expanded.html
+++ b/components/services/prov-o/includes/cross-reference-expanded.html
@@ -3,7 +3,7 @@
 
   <div id="Account" class="entity">
     <h3>
-      <a href="#Account"><span class="dotted" title="http://www.w3.org/ns/prov#Account">prov:Account</span></a>
+      Class: <a href="#Account"><span class="dotted" title="http://www.w3.org/ns/prov#Account">prov:Account</span></a>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-classes-at-a-glance">expanded classes</a>
       </span>
@@ -11,6 +11,12 @@
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#Account</p>
     <div class="definition"><p>An account is any mechanism by which a set of provenance descriptions can be bundled up and named.</p>
     </div>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Account.ttl"%}{% endescape %}</pre>
+    </div>
+
     <dl class="description">
     <div class="comment"><p>Note that there are kinds of accounts (e.g. handwritten letters, audio recordings, etc.) that are not expressed in PROV-O, but can be still be described by PROV-O.</p>
     </div>
@@ -24,7 +30,7 @@
 
   <div id="Location" class="entity">
     <h3>
-      <a href="#Location"><span class="dotted" title="http://www.w3.org/ns/prov#Location">prov:Location</span></a>
+      Class: <a href="#Location"><span class="dotted" title="http://www.w3.org/ns/prov#Location">prov:Location</span></a>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-classes-at-a-glance">expanded classes</a>
       </span>
@@ -32,11 +38,17 @@
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#Location</p>
     <div class="definition"><p>A location can be an identifiable geographic place (ISO 19112), but it can also be a non-geographic place such as a directory, row, or column. As such, there are numerous ways in which location can be expressed, such as by a coordinate, address, landmark, and so forth.</p>
     </div>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Location.ttl"%}{% endescape %}</pre>
+    </div>
+
     <dl class="description">
 
       <dt>in range of</dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#hadLocation" href="#hadLocation">prov:hadLocation</a>
+        <a title="http://www.w3.org/ns/prov#atLocation" href="#atLocation">prov:atLocation</a>
         <sup class="type-op" title="object property">op</sup>
       </dd>
     </dl>
@@ -44,7 +56,7 @@
 
   <div id="Note" class="entity">
     <h3>
-      <a href="#Note"><span class="dotted" title="http://www.w3.org/ns/prov#Note">prov:Note</span></a>
+      Class: <a href="#Note"><span class="dotted" title="http://www.w3.org/ns/prov#Note">prov:Note</span></a>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-classes-at-a-glance">expanded classes</a>
       </span>
@@ -52,6 +64,12 @@
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#Note</p>
     <div class="definition"><p>Attribute-value pairs occurring in notes are application specific.</p>
     </div>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Note.ttl"%}{% endescape %}</pre>
+    </div>
+
     <dl class="description">
 
       <dt>in PROV component</dt>
@@ -69,7 +87,7 @@
 
   <div id="Organization" class="entity">
     <h3>
-      <a href="#Organization"><span class="dotted" title="http://www.w3.org/ns/prov#Organization">prov:Organization</span></a>
+      Class: <a href="#Organization"><span class="dotted" title="http://www.w3.org/ns/prov#Organization">prov:Organization</span></a>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-classes-at-a-glance">expanded classes</a>
       </span>
@@ -77,6 +95,12 @@
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#Organization</p>
     <div class="definition"><p>Agents of type Organization are social institutions such as companies, societies etc.</p>
     </div>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Organization.ttl"%}{% endescape %}</pre>
+    </div>
+
     <dl class="description">
 
       <dt>in PROV component</dt>
@@ -93,7 +117,7 @@
 
   <div id="Person" class="entity">
     <h3>
-      <a href="#Person"><span class="dotted" title="http://www.w3.org/ns/prov#Person">prov:Person</span></a>
+      Class: <a href="#Person"><span class="dotted" title="http://www.w3.org/ns/prov#Person">prov:Person</span></a>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-classes-at-a-glance">expanded classes</a>
       </span>
@@ -101,6 +125,12 @@
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#Person</p>
     <div class="definition"><p>Agents of type Person are people.</p>
     </div>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_Person.ttl"%}{% endescape %}</pre>
+    </div>
+
     <dl class="description">
 
       <dt>in PROV component</dt>
@@ -117,7 +147,7 @@
 
   <div id="SoftwareAgent" class="entity">
     <h3>
-      <a href="#SoftwareAgent"><span class="dotted" title="http://www.w3.org/ns/prov#SoftwareAgent">prov:SoftwareAgent</span></a>
+      Class: <a href="#SoftwareAgent"><span class="dotted" title="http://www.w3.org/ns/prov#SoftwareAgent">prov:SoftwareAgent</span></a>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-classes-at-a-glance">expanded classes</a>
       </span>
@@ -125,6 +155,12 @@
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#SoftwareAgent</p>
     <div class="definition"><p>A software agent is running software.</p>
     </div>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/class_SoftwareAgent.ttl"%}{% endescape %}</pre>
+    </div>
+
     <dl class="description">
 
       <dt>in PROV component</dt>
@@ -143,13 +179,19 @@
      class="prov-expanded owl-properties crossreference">
   <div id="alternateOf" class="entity">
     <h3>
-      <a href="#alternateOf"><span class="dotted" title="http://www.w3.org/ns/prov#alternateOf">prov:alternateOf</span></a>
+      Property: <a href="#alternateOf"><span class="dotted" title="http://www.w3.org/ns/prov#alternateOf">prov:alternateOf</span></a>
       <sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#alternateOf</p>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_alternateOf.ttl"%}{% endescape %}</pre>
+    </div>
+
     <div class="description">
       <dl>
 
@@ -180,15 +222,55 @@
     </div>
   </div>
 
+  <div id="atLocation" class="entity">
+    <h3>
+      Property: <a href="#atLocation"><span class="dotted" title="http://www.w3.org/ns/prov#atLocation">prov:atLocation</span></a>
+      <sup class="type-op" title="object property">op</sup>
+      <span class="backlink">
+         back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
+      </span>
+    </h3>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#atLocation</p>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_atLocation.ttl"%}{% endescape %}</pre>
+    </div>
+
+    <div class="description">
+      <div class="comment"><p>Location is an optional attribute of Entity and Activity.</p>
+      </div>
+      <p><strong>has characteristics</strong> Asymmetric , Irreflexive       </p>
+      <dl>
+
+        <dt>has range</dt>
+        <dd>
+          <ul>
+            <li>
+              <a title="http://www.w3.org/ns/prov#Location" href="#Location" class="owlclass">prov:Location</a>
+            </li>
+          </ul>
+        </dd>
+
+      </dl>
+    </div>
+  </div>
+
   <div id="generated" class="entity">
     <h3>
-      <a href="#generated"><span class="dotted" title="http://www.w3.org/ns/prov#generated">prov:generated</span></a>
+      Property: <a href="#generated"><span class="dotted" title="http://www.w3.org/ns/prov#generated">prov:generated</span></a>
       <sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#generated</p>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_generated.ttl"%}{% endescape %}</pre>
+    </div>
+
     <div class="description">
       <div class="comment"><p>This inverse of prov:wasGeneratedBy is defined so that Activities being described can reference their generated outputs directly without needing to 'stop' and start describing the Entity. This helps 'Activity-centric' modeling as opposed to 'Entity-centric' modeling.</p>
       </div>
@@ -239,43 +321,21 @@
     </div>
   </div>
 
-  <div id="hadLocation" class="entity">
-    <h3>
-      <a href="#hadLocation"><span class="dotted" title="http://www.w3.org/ns/prov#hadLocation">prov:hadLocation</span></a>
-      <sup class="type-op" title="object property">op</sup>
-      <span class="backlink">
-         back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
-      </span>
-    </h3>
-    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#hadLocation</p>
-    <div class="description">
-      <div class="comment"><p>Location is an optional attribute of Entity and Activity.</p>
-      </div>
-      <p><strong>has characteristics</strong> Asymmetric , Irreflexive       </p>
-      <dl>
-
-        <dt>has range</dt>
-        <dd>
-          <ul>
-            <li>
-              <a title="http://www.w3.org/ns/prov#Location" href="#Location" class="owlclass">prov:Location</a>
-            </li>
-          </ul>
-        </dd>
-
-      </dl>
-    </div>
-  </div>
-
   <div id="hadOriginalSource" class="entity">
     <h3>
-      <a href="#hadOriginalSource"><span class="dotted" title="http://www.w3.org/ns/prov#hadOriginalSource">prov:hadOriginalSource</span></a>
+      Property: <a href="#hadOriginalSource"><span class="dotted" title="http://www.w3.org/ns/prov#hadOriginalSource">prov:hadOriginalSource</span></a>
       <sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#hadOriginalSource</p>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_hadOriginalSource.ttl"%}{% endescape %}</pre>
+    </div>
+
     <div class="description">
       <dl>
 
@@ -329,13 +389,19 @@
 
   <div id="hasAnnotation" class="entity">
     <h3>
-      <a href="#hasAnnotation"><span class="dotted" title="http://www.w3.org/ns/prov#hasAnnotation">prov:hasAnnotation</span></a>
+      Property: <a href="#hasAnnotation"><span class="dotted" title="http://www.w3.org/ns/prov#hasAnnotation">prov:hasAnnotation</span></a>
       <sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#hasAnnotation</p>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_hasAnnotation.ttl"%}{% endescape %}</pre>
+    </div>
+
     <div class="description">
       <dl>
 
@@ -359,13 +425,19 @@
 
   <div id="specializationOf" class="entity">
     <h3>
-      <a href="#specializationOf"><span class="dotted" title="http://www.w3.org/ns/prov#specializationOf">prov:specializationOf</span></a>
+      Property: <a href="#specializationOf"><span class="dotted" title="http://www.w3.org/ns/prov#specializationOf">prov:specializationOf</span></a>
       <sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#specializationOf</p>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_specializationOf.ttl"%}{% endescape %}</pre>
+    </div>
+
     <div class="description">
       <dl>
 
@@ -398,13 +470,19 @@
 
   <div id="tracedTo" class="entity">
     <h3>
-      <a href="#tracedTo"><span class="dotted" title="http://www.w3.org/ns/prov#tracedTo">prov:tracedTo</span></a>
+      Property: <a href="#tracedTo"><span class="dotted" title="http://www.w3.org/ns/prov#tracedTo">prov:tracedTo</span></a>
       <sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#tracedTo</p>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_tracedTo.ttl"%}{% endescape %}</pre>
+    </div>
+
     <div class="description">
       <p><strong>has characteristics</strong> Transitive       </p>
       <dl>
@@ -471,13 +549,19 @@
 
   <div id="wasEndedBy" class="entity">
     <h3>
-      <a href="#wasEndedBy"><span class="dotted" title="http://www.w3.org/ns/prov#wasEndedBy">prov:wasEndedBy</span></a>
+      Property: <a href="#wasEndedBy"><span class="dotted" title="http://www.w3.org/ns/prov#wasEndedBy">prov:wasEndedBy</span></a>
       <sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#wasEndedBy</p>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_wasEndedBy.ttl"%}{% endescape %}</pre>
+    </div>
+
     <div class="description">
       <dl>
 
@@ -522,13 +606,19 @@
 
   <div id="wasQuotedFrom" class="entity">
     <h3>
-      <a href="#wasQuotedFrom"><span class="dotted" title="http://www.w3.org/ns/prov#wasQuotedFrom">prov:wasQuotedFrom</span></a>
+      Property: <a href="#wasQuotedFrom"><span class="dotted" title="http://www.w3.org/ns/prov#wasQuotedFrom">prov:wasQuotedFrom</span></a>
       <sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#wasQuotedFrom</p>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_wasQuotedFrom.ttl"%}{% endescape %}</pre>
+    </div>
+
     <div class="description">
       <dl>
 
@@ -582,13 +672,19 @@
 
   <div id="wasRevisionOf" class="entity">
     <h3>
-      <a href="#wasRevisionOf"><span class="dotted" title="http://www.w3.org/ns/prov#wasRevisionOf">prov:wasRevisionOf</span></a>
+      Property: <a href="#wasRevisionOf"><span class="dotted" title="http://www.w3.org/ns/prov#wasRevisionOf">prov:wasRevisionOf</span></a>
       <sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#wasRevisionOf</p>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_wasRevisionOf.ttl"%}{% endescape %}</pre>
+    </div>
+
     <div class="description">
       <dl>
 
@@ -642,13 +738,19 @@
 
   <div id="wasStartedBy" class="entity">
     <h3>
-      <a href="#wasStartedBy"><span class="dotted" title="http://www.w3.org/ns/prov#wasStartedBy">prov:wasStartedBy</span></a>
+      Property: <a href="#wasStartedBy"><span class="dotted" title="http://www.w3.org/ns/prov#wasStartedBy">prov:wasStartedBy</span></a>
       <sup class="type-op" title="object property">op</sup>
       <span class="backlink">
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
     <p><strong>IRI:</strong> http://www.w3.org/ns/prov#wasStartedBy</p>
+
+    <div class="example">
+      <strong>Example</strong>
+      <pre>{% escape %}{% include "includes/prov/examples/eg-24-prov-o-html-examples/rdf/create/rdf/property_wasStartedBy.ttl"%}{% endescape %}</pre>
+    </div>
+
     <div class="description">
       <dl>
 
