--- a/components/services/prov-o/includes/cross-reference-expanded.html
+++ b/components/services/prov-o/includes/cross-reference-expanded.html
@@ -45,6 +45,8 @@
     </div>
 
     <dl class="description">
+    <div class="comment"><p>A location can be an identifiable geographic place (ISO 19112), but it can also be a non-geographic place such as a directory, row, or column. As such, there are numerous ways in which location can be expressed, such as by a coordinate, address, landmark, and so forth.</p>
+    </div>
 
       <dt>in range of</dt>
       <dd>
@@ -71,6 +73,8 @@
     </div>
 
     <dl class="description">
+    <div class="comment"><p>Attribute-value pairs occurring in notes are application specific.</p>
+    </div>
 
       <dt>in PROV component</dt>
       <dd class="component-annotations">
@@ -102,6 +106,8 @@
     </div>
 
     <dl class="description">
+    <div class="comment"><p>Agents of type Organization are social institutions such as companies, societies etc.</p>
+    </div>
 
       <dt>in PROV component</dt>
       <dd class="component-agents-responsibility">
@@ -132,6 +138,8 @@
     </div>
 
     <dl class="description">
+    <div class="comment"><p>Agents of type Person are people.</p>
+    </div>
 
       <dt>in PROV component</dt>
       <dd class="component-agents-responsibility">
@@ -162,6 +170,8 @@
     </div>
 
     <dl class="description">
+    <div class="comment"><p>A software agent is running software.</p>
+    </div>
 
       <dt>in PROV component</dt>
       <dd class="component-agents-responsibility">
@@ -193,6 +203,8 @@
     </div>
 
     <div class="description">
+      <div class="comment"><p>An entity is alternate of another if they are both a specialization of some common entity. The common entity does not need to be identified.</p>
+      </div>
       <dl>
 
       <dt>in PROV component</dt>
@@ -439,6 +451,8 @@
     </div>
 
     <div class="description">
+      <div class="comment"><p>An entity is a specialization of another if they both refer to some common thing but the former is a more constrained entity than the former. The common entity does not need to be identified.</p>
+      </div>
       <dl>
 
       <dt>in PROV component</dt>
@@ -484,6 +498,8 @@
     </div>
 
     <div class="description">
+      <div class="comment"><p>An object property to link back an entity to another by means of derivation or responsibility relations, possibly repeatedly traversed.</p>
+      </div>
       <p><strong>has characteristics</strong> Transitive       </p>
       <dl>
 
@@ -563,6 +579,8 @@
     </div>
 
     <div class="description">
+      <div class="comment"><p>End is when an activity is deemed to have ended. An end may refer to an entity, known as trigger, that terminated the activity.</p>
+      </div>
       <dl>
 
       <dt>in PROV component</dt>
@@ -620,6 +638,8 @@
     </div>
 
     <div class="description">
+      <div class="comment"><p>An entity is derived from an original entity by copying, or "quoting", some or all of it.</p>
+      </div>
       <dl>
 
       <dt>in PROV component</dt>
@@ -686,6 +706,8 @@
     </div>
 
     <div class="description">
+      <div class="comment"><p>A revision is a derivation that revises an entity into a revised version.</p>
+      </div>
       <dl>
 
       <dt>in PROV component</dt>
@@ -752,6 +774,8 @@
     </div>
 
     <div class="description">
+      <div class="comment"><p>Start is when an activity is deemed to have started. A start may refer to an entity, known as trigger, that initiated the activity.</p>
+      </div>
       <dl>
 
       <dt>in PROV component</dt>
