--- a/components/services/prov-o/includes/cross-reference-starting-point.html
+++ b/components/services/prov-o/includes/cross-reference-starting-point.html
@@ -18,6 +18,8 @@
     </div>
 
     <dl class="description">
+    <div class="comment"><p>An activity is something that occurs over a period of time and acts upon or with entities. This action can take multiple forms: consuming, processing, transforming, modifying, relocating, using, generating, or being associated with entities. Activities that operate on digital entities may for example move, copy, or duplicate them.</p>
+    </div>
 
       <dt>in PROV component</dt>
       <dd class="component-entities-activities">
@@ -28,29 +30,29 @@
       <dd>
         <a title="http://www.w3.org/ns/prov#wasStartedByActivity" href="#wasStartedByActivity">prov:wasStartedByActivity</a>
         <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#qualifiedCommunication" href="#qualifiedCommunication">prov:qualifiedCommunication</a>
+        <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#qualifiedStart" href="#qualifiedStart">prov:qualifiedStart</a>
         <sup class="type-op" title="object property">op</sup>
-        <a title="http://www.w3.org/ns/prov#qualifiedAssociation" href="#qualifiedAssociation">prov:qualifiedAssociation</a>
-        <sup class="type-op" title="object property">op</sup>
-        <a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy">prov:wasInformedBy</a>
+        <a title="http://www.w3.org/ns/prov#qualifiedEnd" href="#qualifiedEnd">prov:qualifiedEnd</a>
         <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#startedAtTime" href="#startedAtTime">prov:startedAtTime</a>
         <sup class="type-dp" title="data property">dp</sup>
         <a title="http://www.w3.org/ns/prov#wasEndedBy" href="#wasEndedBy">prov:wasEndedBy</a>
         <sup class="type-op" title="object property">op</sup>
-        <a title="http://www.w3.org/ns/prov#generated" href="#generated">prov:generated</a>
-        <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#qualifiedStartByActivity" href="#qualifiedStartByActivity">prov:qualifiedStartByActivity</a>
         <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#endedAtTime" href="#endedAtTime">prov:endedAtTime</a>
         <sup class="type-dp" title="data property">dp</sup>
-        <a title="http://www.w3.org/ns/prov#wasAssociatedWith" href="#wasAssociatedWith">prov:wasAssociatedWith</a>
+        <a title="http://www.w3.org/ns/prov#generated" href="#generated">prov:generated</a>
         <sup class="type-op" title="object property">op</sup>
-        <a title="http://www.w3.org/ns/prov#qualifiedCommunication" href="#qualifiedCommunication">prov:qualifiedCommunication</a>
+        <a title="http://www.w3.org/ns/prov#qualifiedAssociation" href="#qualifiedAssociation">prov:qualifiedAssociation</a>
+        <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#wasAssociatedWith" href="#wasAssociatedWith">prov:wasAssociatedWith</a>
         <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#wasStartedBy" href="#wasStartedBy">prov:wasStartedBy</a>
         <sup class="type-op" title="object property">op</sup>
-        <a title="http://www.w3.org/ns/prov#qualifiedEnd" href="#qualifiedEnd">prov:qualifiedEnd</a>
+        <a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy">prov:wasInformedBy</a>
         <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#qualifiedUsage" href="#qualifiedUsage">prov:qualifiedUsage</a>
         <sup class="type-op" title="object property">op</sup>
@@ -60,11 +62,11 @@
 
       <dt>in range of</dt>
       <dd>
+        <a title="http://www.w3.org/ns/prov#wasGeneratedBy" href="#wasGeneratedBy">prov:wasGeneratedBy</a>
+        <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy">prov:wasInformedBy</a>
         <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#wasStartedByActivity" href="#wasStartedByActivity">prov:wasStartedByActivity</a>
-        <sup class="type-op" title="object property">op</sup>
-        <a title="http://www.w3.org/ns/prov#wasGeneratedBy" href="#wasGeneratedBy">prov:wasGeneratedBy</a>
         <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity">prov:hadActivity</a>
         <sup class="type-op" title="object property">op</sup>
@@ -91,15 +93,12 @@
     </div>
 
     <dl class="description">
+    <div class="comment"><p>An agent is a type of entity that bears some form of responsibility for an activity taking place.</p>
+    </div>
 
       <dt>in PROV component</dt>
       <dd class="component-agents-responsibility">
         <a title="agents-responsibility" href="#component-agents-responsibility">agents-responsibility</a>
-      </dd>
-
-      <dt>is subclass of</dt>
-      <dd>
-        <a title="http://www.w3.org/2002/07/owl#Thing" href="#Thing" class="owlclass">prov:Thing</a>
       </dd>
 
       <dt>in domain of</dt>
@@ -152,6 +151,8 @@
     </div>
 
     <dl class="description">
+    <div class="comment"><p>An entity is a thing one wants to provide provenance for. For the purpose of this specification, things can be physical, digital, conceptual, or otherwise; things may be real or imaginary.</p>
+    </div>
 
       <dt>in PROV component</dt>
       <dd class="component-entities-activities">
@@ -170,7 +171,7 @@
         <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#wasQuotedFrom" href="#wasQuotedFrom">prov:wasQuotedFrom</a>
         <sup class="type-op" title="object property">op</sup>
-        <a title="http://www.w3.org/ns/prov#wasGeneratedBy" href="#wasGeneratedBy">prov:wasGeneratedBy</a>
+        <a title="http://www.w3.org/ns/prov#wasAttributedTo" href="#wasAttributedTo">prov:wasAttributedTo</a>
         <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#hadOriginalSource" href="#hadOriginalSource">prov:hadOriginalSource</a>
         <sup class="type-op" title="object property">op</sup>
@@ -184,7 +185,7 @@
         <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#qualifiedRevision" href="#qualifiedRevision">prov:qualifiedRevision</a>
         <sup class="type-op" title="object property">op</sup>
-        <a title="http://www.w3.org/ns/prov#wasAttributedTo" href="#wasAttributedTo">prov:wasAttributedTo</a>
+        <a title="http://www.w3.org/ns/prov#wasGeneratedBy" href="#wasGeneratedBy">prov:wasGeneratedBy</a>
         <sup class="type-op" title="object property">op</sup>
         <a title="http://www.w3.org/ns/prov#wasDerivedFrom" href="#wasDerivedFrom">prov:wasDerivedFrom</a>
         <sup class="type-op" title="object property">op</sup>
@@ -249,6 +250,8 @@
     </div>
 
     <div class="description">
+      <div class="comment"><p>An object property to express the accountability of an agent towards another agent. The subordinate agent acted on behalf of the responsible agent in an actual activity. </p>
+      </div>
       <dl>
 
       <dt>in PROV component</dt>
@@ -315,6 +318,8 @@
     </div>
 
     <div class="description">
+      <div class="comment"><p>The time when an activity ended.</p>
+      </div>
       <p><strong>has characteristics</strong>  Functional       </p>
       <dl>
 
@@ -361,6 +366,8 @@
     </div>
 
     <div class="description">
+      <div class="comment"><p>The time when an activity started.</p>
+      </div>
       <p><strong>has characteristics</strong>  Functional       </p>
       <dl>
 
@@ -476,7 +483,7 @@
     </div>
 
     <div class="description">
-      <div class="comment"><p>A prov:Agent that had some (unspecified) responsibility for the occurrence of this prov:Activity.</p>
+      <div class="comment"><p>An prov:Agent that had some (unspecified) responsibility for the occurrence of this prov:Activity.</p>
       </div>
       <dl>
 
@@ -556,6 +563,8 @@
     </div>
 
     <div class="description">
+      <div class="comment"><p>Attribution is the ascribing of an entity to an agent.</p>
+      </div>
       <dl>
 
       <dt>in PROV component</dt>
@@ -622,6 +631,8 @@
     </div>
 
     <div class="description">
+      <div class="comment"><p>A derivation is a transformation of an entity into another, a construction of an entity into another, or an update of an entity, resulting in a new one.</p>
+      </div>
       <p><strong>has characteristics</strong> Asymmetric , Irreflexive       </p>
       <dl>
 
@@ -667,10 +678,10 @@
               <a title="http://www.w3.org/ns/prov#wasQuotedFrom" href="#wasQuotedFrom" class="owlclass">prov:wasQuotedFrom</a>
             </li>
             <li>
-              <a title="http://www.w3.org/ns/prov#derivedByRemovalFrom" href="#derivedByRemovalFrom" class="owlclass">prov:derivedByRemovalFrom</a>
+              <a title="http://www.w3.org/ns/prov#hadOriginalSource" href="#hadOriginalSource" class="owlclass">prov:hadOriginalSource</a>
             </li>
             <li>
-              <a title="http://www.w3.org/ns/prov#hadOriginalSource" href="#hadOriginalSource" class="owlclass">prov:hadOriginalSource</a>
+              <a title="http://www.w3.org/ns/prov#derivedByRemovalFrom" href="#derivedByRemovalFrom" class="owlclass">prov:derivedByRemovalFrom</a>
             </li>
             <li>
               <a title="http://www.w3.org/ns/prov#wasRevisionOf" href="#wasRevisionOf" class="owlclass">prov:wasRevisionOf</a>
@@ -779,6 +790,8 @@
     </div>
 
     <div class="description">
+      <div class="comment"><p>An activity a2 is dependent on or informed by another activity a1, by way of some unspecified entity that is generated by a1 and used by a2.</p>
+      </div>
       <dl>
 
       <dt>in PROV component</dt>
@@ -845,6 +858,8 @@
     </div>
 
     <div class="description">
+      <div class="comment"><p>The start of an activity with an implicit trigger generated by another activity.</p>
+      </div>
       <dl>
 
       <dt>in PROV component</dt>
